--- a/Projeto Final/app/templates/layout.html
+++ b/Projeto Final/app/templates/layout.html
@@ -8,7 +8,7 @@
         <title>Home</title>
     {% endif %}
     <!-- Quando precisar usar algum link, usa a função: url_for('nome da função no app.py') -->
-    <a href="{{ url_for('home') }}" >Home</a>
+    <a href="{{ url_for('escolha_do_filme') }}" >Home</a>
     <a href="{{ url_for('adminLogin') }}">Admin Login</a>
 </head>
 <body>
