--- a/Prova 2/app/templates/register.html
+++ b/Prova 2/app/templates/register.html
@@ -6,7 +6,7 @@
     </nav>
 </header>
 <main>
-    <div class="login">
+    <div class="login" id="login_register">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset>
